jenkins_kube_stack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: santhu304/jenkins_jcasc:3.0.0
        imagePullPolicy: Always
        volumeMounts:
          - name: jenkins-config
            mountPath: /var/jenkins_home/casc_configs/
          - name: jenkins-home
            mountPath: /var/jenkins_home
          - name: secrets-volume
            mountPath: "/etc/secrets/"
            readOnly: true
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        resources:
          requests:
            memory: "512Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "2000m"
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: jenkins-config
          configMap:
              name: jenkinsmaster
        - name: jenkins-home
          emptyDir: {}
        - name: secrets-volume
          secret:
            secretName: jenkins-secrets
