jenkins_kube_stack/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  labels:
    app: "jenkins"
  namespace: "jenkins"
  name: "jenkins-master-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "jenkins"
      http:
       paths:
         - backend:
              service:
                name: "jenkins"
                port:
                  number:  8080
           path: "/"
           pathType: Prefix
